--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,12 @@
     <meta
       http-equiv="Content-Security-Policy"
       content="
-      default-src 'self';
-      font-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://maxcdn.bootstrapcdn.com;
-      style-src 'self' https://cdn.jsdelivr.net 'unsafe-inline';
-      script-src 'self' https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com;
-      img-src 'self';
-    "
+        default-src 'self';
+        font-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://maxcdn.bootstrapcdn.com;
+        style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net;
+        script-src 'self' https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com;
+        img-src 'self';
+      "
     />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -38,10 +38,6 @@
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
-    />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-      rel="stylesheet"
     />
     <title>InternConnect</title>
   </head>
