--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,19 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="
+      default-src 'self' 'unsafe-eval';
+      style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css;
+      style-src-elem 'self' https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css 'unsafe-inline';
+      script-src 'self' https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com;
+      script-src-elem 'self' https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com;
+      img-src 'self' https://lh3.googleusercontent.com;
+    "
+    />
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
