--- a/public/index.html
+++ b/public/index.html
@@ -14,16 +14,19 @@
       content="Web site created using create-react-app"
     />
 
+    <meta http-equiv="Content-Security-Policy" content="" />
     <meta
       http-equiv="Content-Security-Policy"
       content="
-        default-src 'self';
-        font-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://maxcdn.bootstrapcdn.com;
-        style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net;
-        script-src 'self' https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com;
-        img-src 'self';
-      "
+      default-src 'self' 'unsafe-eval';
+      style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css;
+      style-src-elem 'self' https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js 'unsafe-inline';
+      script-src 'self' https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com;
+      script-src-elem 'self' https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com;
+      img-src 'self' https://lh3.googleusercontent.com;
+    "
     />
+
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
