--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,16 @@
 
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-V/wiGzXm7TR4Gz1v/1LsOM6rs63k7Ud0Jj+4jL++Bsyu6Aijy4RTYizfdaJU43G9RzgFou0ePEwtfVTHphmDw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
+    <link
+      href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
