--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
   script-src 'self' 'nonce-randomvalue';
 "
     /> -->
+    <!-- Add the Razorpay SDK script -->
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
     <link
       rel="stylesheet"
@@ -51,6 +53,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
   </body>
 </html>
